--- a/package.json
+++ b/package.json
@@ -78,6 +78,10 @@
 	},
 	"dependencies": {
 		"bootstrap": "^4.3.1",
+		"jquery": "^3.6.0",
+		"popper": "^1.0.1",
+		"popper.js": "^1.16.1",
+		"poppers": "^0.1.2",
 		"prop-types": "^15.6.1",
 		"react": "^16.8.4",
 		"react-dom": "^16.8.4",
